[build-system]
requires = [
    "setuptools", "setuptools-scm"
]
build-backend = "setuptools.build_meta"

[project]
name = "specterext_stacktrack"

authors = [
  { name="Wombat6"},
]
description = "Specter Desktop extension to add time series charts for visualizing wallet balances"
urls = { Homepage = "https://github.com/cryptoadvance/specterext-stacktrack" }
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
    "pandas>=1.3.0",
    "plotly==5.10.0",
]

license = {file = "LICENSE"}

classifiers =[
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
dynamic=["version"]

[tool.setuptools_scm]
write_to = "src/cryptoadvance/specterext/stacktrack/_version.py"

[project.optional-dependencies]
test = [
  "cryptoadvance.specter>=1.14.5",
  "pytest >=7.1.3",
  "pytest-cov[all]"
]