[metadata]
name = wombat6_stacktrack
version = 0.0.1
author = wombat6
author_email = noreply@noreply.com
description = Specter Desktop plugin to add time series charts for visualizing wallet balances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wombat6/specterext-stacktrack
project_urls =
    Bug Tracker = https://github.com/wombat6/specterext-stacktrack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data=true
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where = src